Add icons and styles to sidebar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 .page-container {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.page-container {
     display: grid;
     grid-template-columns: clamp(250px, 25%, 350px) 5fr;
     grid-template-rows: 100px 1fr;
@@ -12,6 +15,27 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: max-content max-content max-content;
+    color: white;
+}
+
+li>img {
+    margin-right: .8rem;
+    width: 1rem;
+}
+
+
+h2>img {
+    margin-right: .8rem;
+}
+.sidebar li {
+    margin: 1.5rem;
+    font-size: 1.2rem;
+
+}
+
+.sidebar h2 {
+    margin: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .header {
