--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 .search-bar {
     display: grid;
-    grid-template-columns: min-content min(600px, 75%);
+    grid-template-columns: min-content min(450px, 75%);
     align-items: center;
     justify-content: left;
 }
@@ -52,7 +52,7 @@
 }
 .user-logos img {
     height: 40px;
-    margin: 5px 15px 5px 15px;
+    margin: 5px 12px 5px 12px;
 
 }
 
@@ -69,9 +69,9 @@
 
 .header h3 {
     font-weight: 400;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-right: 40px;
-    margin-left: 15px;
+    margin-left: 12px;
 }
 
 .user-menu {
@@ -126,6 +126,7 @@
     border-radius: 20px;
     padding: 8px 20px 8px 20px;
     border: none;
+    font-weight: 600;
 }
 
 .header-buttons>:last-child {
