Debug grid auto flow and add accents

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     grid-template-rows: 160px 1fr;
     grid-template-areas: "sidebar header"
     "sidebar main-content";
+    height: 100vh;
 }
 
 /* HEADER STYLES */
@@ -31,7 +32,6 @@
     display: grid;
     grid-template-columns: min-content min(450px, 75%);
     align-items: center;
-    justify-content: left;
 }
 
 .user-logos {
@@ -72,6 +72,7 @@
     font-size: 1.1rem;
     margin-right: 40px;
     margin-left: 12px;
+    justify-self: start;
 }
 
 .user-menu {
@@ -117,7 +118,6 @@
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 20px;
-    place-items: center;
 }
 
 .header-buttons button {
@@ -127,6 +127,7 @@
     padding: 8px 20px 8px 20px;
     border: none;
     font-weight: 600;
+
 }
 
 .header-buttons>:last-child {
@@ -144,6 +145,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 100px 330px 175px;
     color: white;
+
 }
 
 li>img {
@@ -177,8 +179,18 @@ h2>img {
 .main-content {
     grid-area: main-content;
     background-color: #D6E4E5;
+    grid-template-rows: 40px auto;
     grid-template-columns: 3fr 1fr;
     display: grid;
+}
+
+.main-content h3 {
+    padding-top: 25px;
+    font-size: 1.2rem;
+}
+
+#projects-title {
+    padding-left: 20px;
 }
 
 .task-card-container {
@@ -186,14 +198,18 @@ h2>img {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    padding-top: 50px;
+    grid-auto-rows: max-content;
 }
 
 .task-card {
-    background-color: white;
+    background: linear-gradient(90deg, #ff9578 3%, white 0%);
     width: auto;
     height: 225px;
-
+    border-radius: 20px;
+    padding-top: 10px;
+    padding-left: 20px;
+    box-sizing: border-box;
+    box-shadow: 5px 5px 5px rgb(102, 102, 102);
 }
 
 .social-container {
@@ -202,18 +218,18 @@ h2>img {
     grid-template-rows: 300px 300px;
     gap: 20px;
     padding: 20px;
-    padding-top: 50px;
     padding-left: 0px;
 }
 
+
+.trending,
 .announcements {
     background-color: white;
-    width: 200px;
+    width: 225px;
     height: 300px;
-}
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px rgb(102, 102, 102);
 
-.trending {
-    background-color: white;
-    width: 200px;
-    height: 300px;
 }
