--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
     display: grid;
     grid-template-columns: auto auto max-content;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
 }
 
 .search-bar img {
